ops/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utilityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utilityapi
  template:
    metadata:
      labels:
        app: utilityapi
    spec:
      containers:
        - name: utilityapi
          image: tsmarsh/utilityapi:latest
          ports:
            - containerPort: 3000
