ops/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utilityapi
spec:
  selector:
    app: utilityapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
