ops/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utilityapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - dev.poundit.co.uk
      secretName: utilityapi-tls
  rules:
    - host: dev.poundit.co.uk
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: utilityapi
                port:
                  number: 80
